# HellumHub_Backend

./: .dockerignore  .env.example  .gitignore  Deployment_setup.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  test_pydantic.py
Frontend/: .env.example  index.html  package.json
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/api/: client.ts
Frontend/src/hooks/: queryKeys.ts
Frontend/src/pages/: releases-page.tsx
Frontend/src/types/: models.ts
app/: main.py
app/api/: deps.py
app/api/routers/: admin.py  admin_roles.py  consumer.py  device_models.py  health.py  oauth.py  smart_home.py  smart_switch.py  smarthome_admin.py
app/core/: config.py  logging.py  security.py
app/db/: indexes.py  mongo.py
app/middleware/: rate_limit.py  request_context.py
app/models/: admin_user.py  constants.py  device_model.py  smarthome_device.py  user.py
app/repositories/: admin_user_repository.py  audit_repository.py  device_model_repository.py  device_repository.py  firmware_repository.py  override_repository.py  release_repository.py  smarthome_device_repository.py  user_repository.py
app/schemas/: admin.py  check.py  common.py  smarthome.py  user.py
app/services/: admin_service.py  check_service.py  mqtt_service.py  url_signer.py
app/utils/: mac.py  rollout.py  semver_utils.py
mosquitto/: mosquitto.conf
scripts/: seed.py
tests/: conftest.py  fakes.py
tests/integration/: test_admin_flow.py  test_check_endpoint.py
tests/unit/: test_check_service.py
(+2 files in other folders)
