[project]
name = "ota-backend"
version = "0.1.0"
description = "Production-ready OTA backend with FastAPI, MongoDB Atlas, and GridFS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "motor>=3.6.0",
  "pydantic-settings>=2.6.0",
  "semver>=3.0.2",
  "PyJWT>=2.9.0",
  "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.0",
  "asgi-lifespan>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
